# ftr-analysis-tui

./: .gitignore  .mcp.json  CLAUDE.md  PRD.md  README.md  agent-log.md  analysis_tui.py  excel_file_structure_analysis.md  flow_results_processed_test_backup.xlsx  project-architecture.md  project-plan.md  pyproject.toml  pyrightconfig.json  requirements.txt  test_cell_editing.py  test_color_brightness.py  test_simple_load.py  test_tui_commands.py
project-tasks/: task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  task-010.md  task-011.md  task-012.md  task-013.md  task-014.md  task-015.md  task-016.md  task-017.md  task-018.md  task-019.md  task-020.md
src/: __init__.py  __main__.py  app.py
src/business_logic/: __init__.py  auto_save_manager.py  color_formatter.py  excel_data_manager.py  session_manager.py  validators.py
src/core/: __init__.py  data_manager.py  formatter.py  session.py  validator.py
src/io/: __init__.py  excel_io.py  state_io.py
src/models/: __init__.py  data_models.py
src/presentation/: help_overlay.py  navigation_controller.py  shortcut_manager.py
src/widgets/: __init__.py  cell_editor.py  cluster_view.py  color_grid.py  loading_screen.py  sheet_tabs.py  simple_cluster_view.py  status_bar.py
tests/: __init__.py  test_application.py  test_cluster_view.py  test_data_models.py  test_quick_edit_mode.py  test_sheet_tabs.py  test_status_bar.py  test_task_018_navigation_logic.py  test_task_019_keyboard_shortcuts.py
tests/business_logic/: __init__.py  test_auto_save.py  (+5 more)
(+9 files in other folders)
